--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,12 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "internAngular": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:application": {
+          "strict": true
+        }
       },
       "root": "",
       "sourceRoot": "src",
